--- a/citation.bib
+++ b/citation.bib
@@ -4,6 +4,6 @@
   year         = {2025},
   license      = {Q-CDA-1.0},
   publisher    = {Zenodo},
-  version      = {389d77b},
+  version      = {2025-07-18},
   url          = {https://github.com/qompassai/vite}
 }
